--- a/front_end/spot/src/App.css
+++ b/front_end/spot/src/App.css
@@ -23,6 +23,30 @@
   color: #61dafb;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.crop-container {
+  width: 100%;
+  height: 400px;
+  position: relative;
+}
+
+.controls {
+  margin: auto;
+  width: 50%;
+  height: 80px;
+  display: flex;
+  align-items: center;
+}
+
+.slider {
+  width: 200px;
+  height: 10px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
