--- a/front_end/spot/src/index.css
+++ b/front_end/spot/src/index.css
@@ -1,3 +1,14 @@
+html {
+  width: 100%;
+  height: 100%;
+}
+body {
+  width: 100%;
+  height: 100%;
+}
+#root {
+  min-height: 100vh;
+}
 body {
   margin: 0;
   padding: 0;
@@ -6,7 +17,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: blue
+  color: blue;
 }
 
 code {
@@ -15,26 +26,22 @@ code {
 }
 
 #footer {
-  position:absolute;
-  bottom:0;
-  width:100%;
-  
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
-  
-  
+
 #c1 {
   width: 33%;
-  background-color: #007BFF
-  
-} 
-
+  background-color: #007bff;
+}
 
 #c2 {
   width: 33%;
-  background-color:#DB3545
+  background-color: #db3545;
 }
 
 #c3 {
-  width:35% ;
-  background-color:#FEC107
+  width: 35%;
+  background-color: #fec107;
 }
