--- a/front_end/spot/src/index.css
+++ b/front_end/spot/src/index.css
@@ -1,14 +1,3 @@
-html {
-  width: 100%;
-  height: 100%;
-}
-body {
-  width: 100%;
-  height: 100%;
-}
-#root {
-  min-height: 100vh;
-}
 body {
   margin: 0;
   padding: 0;
@@ -17,7 +6,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: blue;
+  color: blue
 }
 
 code {
@@ -26,22 +15,49 @@ code {
 }
 
 #footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
+  position:absolute;
+  bottom:0;
+  width:100%;
+  marginBottom: 50px
 }
+
 
 #c1 {
   width: 33%;
-  background-color: #007bff;
+  color: red;
+  /*background-color: #007BFF*/
+
 }
+
 
 #c2 {
   width: 33%;
-  background-color: #db3545;
+ /* background: linear-gradient(#e66465, #9198e5);*/
+ /*background-color:#DB3545*/
 }
 
 #c3 {
-  width: 35%;
-  background-color: #fec107;
+  width:33% ;
+ /* background-color:#FEC107*/
+}
+
+#center{
+text-align:center;
+width:50%;
+
+}
+
+
+
+#Text{
+
+position: absolute;
+
+right: 90px;
+margin-top: 30px;
+
+
+
+
+
 }
