--- a/front_end/spot/src/index.css
+++ b/front_end/spot/src/index.css
@@ -6,7 +6,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: blue
+  color: blue;
 }
 
 code {
@@ -15,49 +15,60 @@ code {
 }
 
 #footer {
-  position:absolute;
-  bottom:0;
-  width:100%;
-  marginBottom: 50px
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  marginbottom: 50px;
 }
-
 
 #c1 {
   width: 33%;
   color: red;
   /*background-color: #007BFF*/
-
 }
-
 
 #c2 {
   width: 33%;
- /* background: linear-gradient(#e66465, #9198e5);*/
- /*background-color:#DB3545*/
+  /* background: linear-gradient(#e66465, #9198e5);*/
+  /*background-color:#DB3545*/
 }
 
 #c3 {
-  width:33% ;
- /* background-color:#FEC107*/
+  width: 33%;
+  /* background-color:#FEC107*/
 }
 
-#center{
-text-align:center;
-width:50%;
-
+#center {
+  text-align: center;
+  width: 50%;
 }
 
+#Text {
+  position: absolute;
 
+  right: 90px;
+  margin-top: 30px;
+}
 
-#Text{
+#progress {
+  position: relative;
+  bottom: -50px;
+  width: 100%;
+  marginbottom: 50px;
+}
 
-position: absolute;
+#card1 {
+  position: relative;
+  border-radius: 55px;
+  width: 90%;
+  left: 20px;
+  bottom: -20px;
+}
 
-right: 90px;
-margin-top: 30px;
-
-
-
-
-
+#card2 {
+  border-radius: 55px;
+  position: relative;
+  width: 90%;
+  left: 20px;
+  bottom: -30px;
 }
